--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.9",
     "@types/react": "^18.2.24",
     "@types/react-dom": "18.3.0",
     "file-saver": "^2.0.5",
