--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "incremental": true,
     "paths": {
       "@/*": ["./src/*"],
-      "@/graphql/*": ["./graphql/*"],},
+      "@/graphql/*": ["./graphql/*"]
+    },
     "plugins": [
       {
         "name": "next"
