--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-datocms": "^7.0.0",
     "react-dom": "18.3.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yet-another-react-lightbox": "^3.21.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
